--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -14,20 +14,18 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    # Download the SctxConverter.exe
     - name: Download SCTX-Converter
       run: |
         curl -L -o SctxConverter.exe https://github.com/Daniil-SV/SCTX-Converter/releases/latest/download/SctxConverter.exe
 
-    # Run SctxConverter.exe with decode and --texture-only args
     - name: Run SctxConverter
       run: |
-        SctxConverter.exe decode input.sctx --texture-only
+        .\SctxConverter.exe decode input.sctx --texture-only
+      shell: cmd
 
-    # Upload the resulting PNG file as an artifact
     - name: Upload PNG file
       uses: actions/upload-artifact@v3
       with:
         name: decoded-png
         path: |
-          input_texture.png  # Replace with the actual name of the output PNG file
+          input.png
