--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -2,9 +2,15 @@ name: Run SCTX-Converter and Retrieve PNG
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - README
+    inputs:
+      sctx-url:
+        description: 'URL of the .sctx file'
+        required: true
+        default: ''
+      discord-id:
+        description: 'Discord user ID to mention'
+        required: true
+        type: number
 
 jobs:
   decode-sctx:
@@ -18,6 +24,10 @@ jobs:
       run: |
         curl -L -o SctxConverter.exe https://github.com/Daniil-SV/SCTX-Converter/releases/latest/download/SctxConverter.exe
 
+    - name: Download .sctx file
+      run: |
+        curl -L -o input.sctx ${{ github.event.inputs.sctx-url }}
+
     - name: Run SctxConverter
       run: |
         .\SctxConverter.exe decode input.sctx --texture-only
@@ -28,4 +38,11 @@ jobs:
       with:
         name: decoded-png
         path: |
-          input.png
+          input_texture.png
+
+    - name: Post PNG to Discord
+      run: |
+        curl -X POST "${{ secrets.DISCORD_WEBHOOK }}" \
+          -H "Content-Type: multipart/form-data" \
+          -F "content=<@${{ github.event.inputs.discord-id }}>" \
+          -F "file=@input_texture.png"
