--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -45,11 +45,11 @@ jobs:
       with:
         name: decoded-png
         path: |
-          ${{ env.filename }}.png
+          ${{ env.filename }}_texture.png
 
     - name: Post PNG to Discord
       run: |
-        curl -X POST "https://discord.com/api/webhooks/${{ secrets.DISCORD_WEBHOOK_URL }}" \
+        curl -X POST "${{ secrets.DISCORD_WEBHOOK_URL }}" \
           -H "Content-Type: multipart/form-data" \
           -F "content=<@${{ github.event.inputs.discord-id }}>" \
-          -F "file=@${{ env.filename }}.png"
+          -F "file=@${{ env.filename }}_texture.png"
