--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -67,7 +67,7 @@ jobs:
       shell: bash
       run: |
         echo "Posting to Discord..."
-        curl -X POST "${{ secrets.DISCORD_WEBHOOK_URL }}" \
+        curl -X POST "${{ secrets.DISCORD_WEBHOOK }}" \
           -H "Content-Type: application/json" \
           -F "content=<@${{ github.event.inputs.discord-id }}>" \
           -F "file=@"${{ steps.extract_filename.outputs.filename }}.png""
