--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -67,7 +67,12 @@ jobs:
       shell: bash
       run: |
         echo "Posting to Discord..."
-        curl -X POST "${{ secrets.DISCORD_WEBHOOK }}" \
-          -H "Content-Type: application/json" \
-          -F "content=<@${{ github.event.inputs.discord-id }}>" \
-          -F "file=@"${{ steps.extract_filename.outputs.filename }}.png""
+        if [ -f "${{ steps.extract_filename.outputs.filename }}.png" ]; then
+          curl -X POST "${{ secrets.DISCORD_WEBHOOK }}" \
+            -H "Content-Type: multipart/form-data" \
+            -F "content=<@${{ github.event.inputs.discord-id }}>" \
+            -F "file=@${{ steps.extract_filename.outputs.filename }}.png"
+        else
+          echo "File not found: ${{ steps.extract_filename.outputs.filename }}.png"
+          exit 1
+        fi
