--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -6,7 +6,6 @@ on:
       sctx-url:
         description: 'URL of the .sctx file'
         required: true
-        default: ''
       discord-id:
         description: 'Discord user ID to mention'
         required: true
@@ -27,22 +26,23 @@ jobs:
     - name: Extract filename from URL (PowerShell)
       id: extract_filename
       run: |
-        $url = "${{ github.event.inputs.sctx-url }}"
-        Write-Host "Full URL: $url"
-        
+        $url = "@${{ github.event.inputs.sctx-url }}@"
+        Write-Host "🔗 Full URL received: $url"
+
         # Extract filename without query parameters
         $filename = [System.IO.Path]::GetFileNameWithoutExtension(($url -split '\?')[0])
-        Write-Host "Extracted filename: $filename"
+        Write-Host "📄 Extracted filename: $filename"
 
         echo "filename=$filename" | Out-File -FilePath $env:GITHUB_ENV -Append
 
     - name: Download .sctx file
       run: |
-        $url = "${{ github.event.inputs.sctx-url }}"
+        $url = "@${{ github.event.inputs.sctx-url }}@"
         $output = "${{ env.filename }}.sctx"
-        Write-Host "Downloading from: $url"
+
+        Write-Host "⬇️ Downloading file from: $url"
         
-        # Download using Invoke-WebRequest to avoid PowerShell's '&' issue
+        # Properly handle URL in PowerShell
         Invoke-WebRequest -Uri $url -OutFile $output
 
     - name: Convert .sctx to .png
@@ -65,7 +65,7 @@ jobs:
       with:
         webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
         file: "${{ env.filename }}.png"
-        content: "<@${{ github.event.inputs.discord-id }}>"
+        content: "<@${{ github.event.inputs.discord-id }}> Here's your converted PNG!"
 
     - name: If Failed to Convert
       uses: sarisia/actions-status-discord@v1.15.1
@@ -75,5 +75,5 @@ jobs:
       with:
         nodetail: true
         nofail: false
-        title: "Failed to convert `${{ env.filename }}.sctx` to PNG"
-        content: "<@${{ github.event.inputs.discord-id }}>"
+        title: "❌ Failed to convert `${{ env.filename }}.sctx` to PNG"
+        content: "<@${{ github.event.inputs.discord-id }}> Something went wrong! 😢"
